--- a/css/style.css
+++ b/css/style.css
@@ -1,40 +1,43 @@
+/* Reset CSS */
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
+
+/* Body Styling */
 body {
   width: 100%;
   height: 100vh;
   font-family: "Roboto", sans-serif;
   overflow-x: hidden;
-  /* Set background image */
   background-image: url('background.jpg');
-  /* Specify background size and other properties */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
-/*navbar*/
+
+/* Navbar Styling */
 nav {
   display: flex;
   background-color: rgb(68, 71, 250);
   justify-content: space-around;
-  /* padding: 20px 0; atas bawah 20  kiri kanan 0 */
-  /* atur padding dengan flex */
   height: 45px;
   align-items: center;
   color: whitesmoke;
 }
+
 nav ul {
   display: flex;
   list-style: none;
-  width: 40%;
+  width: 20%;
   justify-content: space-between;
   transition: all 0.4s;
 }
+
 nav .logo {
   font-family: "Firefox", cursive;
-  letter-spacing: 3px; /*space antar char*/
+  letter-spacing: 3px;
 }
 
 nav ul li a {
@@ -46,163 +49,166 @@ nav ul li a {
 nav ul li a:hover {
   color: teal;
 }
-  /* hamburger menu */
-  .menu-toggle{
-    display: none; 
-    flex-direction: column;
-    height: 17px;
-    justify-content: space-between;
-    position: relative;
- }
- .menu-toggle input{
-     position: absolute;
-     top:-5px;
-     left:-3px;
-     width:21px;
-     height: 21px;
-     opacity: 0;
-     cursor: pointer;
-     z-index: 2;
- }
- .menu-toggle span{
-     display: block;
-     width: 21px;
-     height: 2px;
-     background-color: whitesmoke;
-     border-radius: 3px;
-     transition: all 0.7s;
- }
 
-   /*x on hamburger menu*/
-   .menu-toggle span:nth-child(2){
-    transform-origin: left center;
-  }
-  
-  .menu-toggle span:nth-child(4){
-    transform-origin: left center;
-  }
-  
-  .menu-toggle input:checked ~ span:nth-child(2){
-    transform: rotate(45deg) ;
-  }
-  
-  .menu-toggle input:checked ~ span:nth-child(4){
-    transform: rotate(-45deg) ;
-  }
-  /* invis span ke 2 / child ke 3 */
-  .menu-toggle input:checked ~ span:nth-child(3){
-    width: 0%;
-    opacity: 0;
-    transition: .1s
-  }
-
-  .image {
-   
-    width: 50%;
-    height: auto;  
-    max-width: 100px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+/* Hamburger Menu Styling */
+.menu-toggle {
+  display: none;
+  flex-direction: column;
+  height: 17px;
+  justify-content: space-between;
+  position: relative;
 }
 
+.menu-toggle input {
+  position: absolute;
+  top: -5px;
+  left: -3px;
+  width: 21px;
+  height: 21px;
+  opacity: 0;
+  cursor: pointer;
+  z-index: 2;
+}
+
+.menu-toggle span {
+  display: block;
+  width: 21px;
+  height: 2px;
+  background-color: whitesmoke;
+  border-radius: 3px;
+  transition: all 0.7s;
+}
+
+.menu-toggle span:nth-child(2),
+.menu-toggle span:nth-child(4) {
+  transform-origin: left center;
+}
+
+.menu-toggle input:checked ~ span:nth-child(2) {
+  transform: rotate(45deg);
+}
+
+.menu-toggle input:checked ~ span:nth-child(4) {
+  transform: rotate(-45deg);
+}
+
+.menu-toggle input:checked ~ span:nth-child(3) {
+  width: 0%;
+  opacity: 0;
+  transition: 0.1s;
+}
+
+/* Container Styling */
 .container {
-    display: flex;
-    flex-direction: column;
-
-    border: 2px solid blue;
-    padding: 8px;
-    border-radius: 5px;
-    margin: 0 auto;
-    background: url('background.jpg');
+  display: flex;
+  flex-direction: column;
+  border: 2px solid blue;
+  padding: 8px;
+  border-radius: 5px;
+  margin: 0 auto;
+  background: url('background.jpg');
 }
+
+/* Main Styling */
 main {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
 
+/* Box Styling */
 .box {
-    margin: 5px;
-    padding: 10px;
-    border-radius: 5px;
+  margin: 5px;
+  padding: 10px;
+  border-radius: 5px;
 }
-/* supaya ada jarak antar box  */
-.flexone{
-flex-grow: 1;
+
+.flexone {
+  flex-grow: 1;
 }
-.flextwo{
-    flex-grow: 2;
-    }
+
+.flextwo {
+  flex-grow: 2;
+}
+
+/* Footer Styling */
 footer {
-    text-align: center;
+  text-align: center;
 }
-h1{
+
+/* Heading and Paragraph Styling */
+h1 {
   text-align: justify;
   padding-top: 1%;
 }
-h2 {
-  
-    text-align: center;
-    color: brown;
-    text-justify: inter-word;
-    word-wrap: break-word;
 
+h2 {
+  text-align: center;
+  color: brown;
+  text-justify: inter-word;
+  word-wrap: break-word;
 }
+
 h4 {
   text-align: justify;
   padding-top: 1%;
 }
+
 h5 {
   text-align: center;
   color: red;
   word-wrap: break-word;
- 
 }
+
 p {
-    text-align: center;
-    text-justify: inter-word;
+  text-align: center;
+  text-justify: inter-word;
 }
+
+/* Media Queries */
 @media screen and (max-width: 768px) {
-    nav ul{
-      width: 50%;
-    }
+  nav ul {
+    width: 50%;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .menu-toggle {
+    display: flex;
   }
 
-  @media screen and (max-width: 576px) {
-   .menu-toggle{
-       display: flex;
-   }
-   main{
-       flex-direction: column-reverse;
-   }
-    nav ul{
-      position: absolute;
-      right:0;
-      top: 0;
-      width: 50%;
-      flex-direction: column;
-      height: 100vh;
-      justify-content:space-evenly;
-      align-items: center;
-      background-color: coral;
-      /* transform: translateX(100%);  */
-      transition: all 0.72s;
-      opacity: 0;
-      z-index: 2;
-    }
-    nav ul.menushow{
-        opacity: 0.5;
-        /* transform: translateX(0); */
-    }
+  main {
+    flex-direction: column-reverse;
   }
-  .video-container {
-    /* max-width: 100px; */
-    margin: 0 auto;
-    border-radius: 8px;
-    overflow: hiddenc;
-    max-width: 100%;
-    max-height: 100%;
+
+  nav ul {
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 50%;
+    flex-direction: column;
+    height: 100vh;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: rgb(118, 80, 255);
+    transition: all 0.72s;
+    opacity: 0;
+    z-index: 2;
+  }
+
+  nav ul.menushow {
+    opacity: 0.5;
+  }
 }
+
+/* Video Container Styling */
+.video-container {
+  margin: 0 auto;
+  border-radius: 8px;
+  overflow: hidden;
+  max-width: 100%;
+  max-height: 100%;
+}
+/* Animation Styling */
 .slide-in {
   transform: translateX(-100%);
   animation: slideIn 1s ease-in-out forwards;
@@ -210,13 +216,18 @@ p {
 
 @keyframes slideIn {
   from {
-      transform: translateX(-100%);
+    transform: translateX(-100%);
   }
   to {
-      transform: translateX(0);
+    transform: translateX(0);
   }
 }
-img{
-  width: 40px; /* Atur lebar sesuai kebutuhan */
-  margin-right: 10px; /* Atur margin sesuai kebutuhan */
+
+/* Image Styling */
+img {
+  width: 40px;
+  margin-right: 10px;
+}
+iframe{
+  align-items: center;
 }
