--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@ body {
   height: 100vh;
   font-family: "Roboto", sans-serif;
   overflow-x: hidden;
-  background-image: url('background.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -79,10 +78,10 @@ nav ul li a:hover {
   transition: all 0.7s;
 }
 
-.menu-toggle span:nth-child(2),
+/* .menu-toggle span:nth-child(2),
 .menu-toggle span:nth-child(4) {
   transform-origin: left center;
-}
+} */
 
 .menu-toggle input:checked ~ span:nth-child(2) {
   transform: rotate(45deg);
