--- a/css/Galery.css
+++ b/css/Galery.css
@@ -1,201 +1,107 @@
 * {
-  margin: 0;
-  padding: 0;
+  margin: 5;
+  padding: 5;
+  box-sizing: border-box;
 }
+
+/* Body Styling */
 body {
-  width: 100%;
+  width: 98%;
   height: 100vh;
-  font-family: "Roboto", sans-serif;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   overflow-x: hidden;
-  /* Set background image */
-  /* background-image: url('background.jpg'); */
-  /* Specify background size and other properties */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  /* display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0; */
 }
-/*navbar*/
+
+/* Navbar Styling */
 nav {
   display: flex;
-  background-color: rgb(68, 71, 250);
-  justify-content: space-around;
-  /* padding: 20px 0; atas bawah 20  kiri kanan 0 */
-  /* atur padding dengan flex */
-  height: 45px;
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  background-color: rgb(139, 69, 19);
+  justify-content: center;
+  height: 40px;
   align-items: center;
   color: whitesmoke;
 }
+
 nav ul {
   display: flex;
   list-style: none;
-  width: 20%;
+  width: 50%;
   justify-content: space-between;
-  transition: all 0.4s;
-}
-nav .logo {
-  font-family: "Firefox", cursive;
-  letter-spacing: 3px; /*space antar char*/
 }
 
 nav ul li a {
   text-decoration: none;
   color: white;
-  font-size: 0.9rem;
+  font-size:medium;
 }
 
 nav ul li a:hover {
   color: teal;
 }
-  /* hamburger menu */
-  .menu-toggle{
-    display: none; 
-    flex-direction: column;
-    height: 17px;
-    justify-content: space-between;
-    position: relative;
- }
- .menu-toggle input{
-     position: absolute;
-     top:-5px;
-     left:-3px;
-     width:21px;
-     height: 21px;
-     opacity: 0;
-     cursor: pointer;
-     z-index: 2;
- }
- .menu-toggle span{
-     display: block;
-     width: 21px;
-     height: 2px;
-     background-color: whitesmoke;
-     border-radius: 3px;
-     transition: all 0.7s;
- }
 
-   /*x on hamburger menu*/
-   .menu-toggle span:nth-child(2){
-    transform-origin: left center;
-  }
-  
-  .menu-toggle span:nth-child(4){
-    transform-origin: left center;
-  }
-  
-  .menu-toggle input:checked ~ span:nth-child(2){
-    transform: rotate(45deg) ;
-  }
-  
-  .menu-toggle input:checked ~ span:nth-child(4){
-    transform: rotate(-45deg) ;
-  }
-  /* invis span ke 2 / child ke 3 */
-  .menu-toggle input:checked ~ span:nth-child(3){
-    width: 0%;
-    opacity: 0;
-    transition: .1s
-  }
-
-  .image {
-   
-    width: 50%;
-    height: auto;  
-    max-width: 100px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+/* Hamburger Menu Styling */
+.hamburger-menu {
+  width: 30px; /* Lebar ikon hamburger */
+  height: 20px; /* Tinggi ikon hamburger */
+  position: relative;
+  display: inline-block;
+  cursor: pointer; /* Mengubah kursor menjadi tanda panah saat dihover */ 
 }
 
-.container {
-    display: flex;
-    flex-direction: column;
-
-    border: 2px solid blue;
-    padding: 8px;
-    border-radius: 5px;
-    margin: 0 auto;
-    background: url('background.jpg');
-}
-main {
-    display: flex;
-    flex-direction: row;
+/* Garis-garis pada hamburger */
+.hamburger-menu .line {
+  width: 100%;
+  height: 3px; /* Tinggi garis */
+  background-color: #333; /* Warna garis */
+  position: absolute;
+  left: 0;
+  transition: transform 0.3s ease; /* Efek transisi saat dihover */
 }
 
-.box {
-    margin: 5px;
-    padding: 10px;
-    border-radius: 5px;
+/* Mengatur posisi garis-garis */
+.hamburger-menu .line.middle {
+  top: 50%;
+  transform: translateY(-50%);
 }
-/* supaya ada jarak antar box  */
-.flexone{
-flex-grow: 1;
+
+.hamburger-menu .line.top {
+  top: 0;
 }
-.flextwo{
-    flex-grow: 2;
-    }
+
+.hamburger-menu .line.bottom {
+  bottom: 0;
+}
+
+/* Efek hover untuk garis-garis */
+.hamburger-menu:hover .line {
+  background-color: #555; /* Warna garis saat dihover */
+}
+
+/* Efek untuk animasi hamburger menu ketika di klik */
+.hamburger-menu.active .line.top {
+  transform: translateY(50%) rotate(-45deg);
+}
+
+.hamburger-menu.active .line.middle {
+  opacity: 0; /* Menghilangkan garis tengah saat hamburger aktif */
+}
+
+.hamburger-menu.active .line.bottom {
+  transform: translateY(-50%) rotate(45deg);
+}
+
+/* CSS untuk galeri */
+.gallery img {
+  width: 150px; /* Atur lebar gambar */
+  height: auto; /* Biarkan tinggi gambar menyesuaikan secara proporsional */
+  margin: 15px; /* Beri jarak antara gambar */
+}
+
+/* Footer Styling */
 footer {
-    text-align: center;
-}
-h1{
-  text-align: justify;
-  padding-top: 1%;
-}
-h2 {
-  
-    text-align: center;
-    color: brown;
-    text-justify: inter-word;
-    word-wrap: break-word;
-
-}
-h4 {
-  text-align: justify;
-  padding-top: 1%;
-}
-h5 {
   text-align: center;
-  color: red;
-  word-wrap: break-word;
- 
 }
-p {
-    text-align: center;
-    text-justify: inter-word;
-}
-@media screen and (max-width: 768px) {
-    nav ul{
-      width: 50%;
-    }
-  }
-
-  @media screen and (max-width: 576px) {
-   .menu-toggle{
-       display: flex;
-   }
-   main{
-       flex-direction: column-reverse;
-   }
-    nav ul{
-      position: absolute;
-      right:0;
-      top: 0;
-      width: 50%;
-      flex-direction: column;
-      height: 100vh;
-      justify-content:space-evenly;
-      align-items: center;
-      background-color: coral;
-      /* transform: translateX(100%);  */
-      transition: all 0.72s;
-      opacity: 0;
-      z-index: 2;
-    }
-    nav ul.menushow{
-        opacity: 0.5;
-        /* transform: translateX(0); */
-    }
-  }
