--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,15 @@
 /* Reset CSS */
 * {
-  margin: 0;
-  padding: 0;
+  margin: 5;
+  padding: 5;
   box-sizing: border-box;
 }
 
 /* Body Styling */
 body {
-  width: 100%;
+  width: 98%;
   height: 100vh;
-  font-family: "Roboto", sans-serif;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   overflow-x: hidden;
   background-size: cover;
   background-position: center;
@@ -19,9 +19,10 @@ body {
 /* Navbar Styling */
 nav {
   display: flex;
-  background-color: rgb(68, 71, 250);
-  justify-content: space-around;
-  height: 45px;
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  background-color: rgb(139, 69, 19);
+  justify-content: center;
+  height: 40px;
   align-items: center;
   color: whitesmoke;
 }
@@ -29,20 +30,14 @@ nav {
 nav ul {
   display: flex;
   list-style: none;
-  width: 20%;
+  width: 50%;
   justify-content: space-between;
-  transition: all 0.4s;
-}
-
-nav .logo {
-  font-family: "Firefox", cursive;
-  letter-spacing: 3px;
 }
 
 nav ul li a {
   text-decoration: none;
   color: white;
-  font-size: 0.9rem;
+  font-size:medium;
 }
 
 nav ul li a:hover {
@@ -50,83 +45,65 @@ nav ul li a:hover {
 }
 
 /* Hamburger Menu Styling */
-.menu-toggle {
-  display: none;
-  flex-direction: column;
-  height: 17px;
-  justify-content: space-between;
+.hamburger-menu {
+  width: 30px; /* Lebar ikon hamburger */
+  height: 20px; /* Tinggi ikon hamburger */
   position: relative;
+  display: inline-block;
+  cursor: pointer; /* Mengubah kursor menjadi tanda panah saat dihover */ 
 }
 
-.menu-toggle input {
+/* Garis-garis pada hamburger */
+.hamburger-menu .line {
+  width: 100%;
+  height: 3px; /* Tinggi garis */
+  background-color: #333; /* Warna garis */
   position: absolute;
-  top: -5px;
-  left: -3px;
-  width: 21px;
-  height: 21px;
-  opacity: 0;
-  cursor: pointer;
-  z-index: 2;
+  left: 0;
+  transition: transform 0.3s ease; /* Efek transisi saat dihover */
 }
 
-.menu-toggle span {
-  display: block;
-  width: 21px;
-  height: 2px;
-  background-color: whitesmoke;
-  border-radius: 3px;
-  transition: all 0.7s;
+/* Mengatur posisi garis-garis */
+.hamburger-menu .line.middle {
+  top: 50%;
+  transform: translateY(-50%);
 }
 
-/* .menu-toggle span:nth-child(2),
-.menu-toggle span:nth-child(4) {
-  transform-origin: left center;
-} */
-
-.menu-toggle input:checked ~ span:nth-child(2) {
-  transform: rotate(45deg);
+.hamburger-menu .line.top {
+  top: 0;
 }
 
-.menu-toggle input:checked ~ span:nth-child(4) {
-  transform: rotate(-45deg);
+.hamburger-menu .line.bottom {
+  bottom: 0;
 }
 
-.menu-toggle input:checked ~ span:nth-child(3) {
-  width: 0%;
-  opacity: 0;
-  transition: 0.1s;
+/* Efek hover untuk garis-garis */
+.hamburger-menu:hover .line {
+  background-color: #555; /* Warna garis saat dihover */
+}
+
+/* Efek untuk animasi hamburger menu ketika di klik */
+.hamburger-menu.active .line.top {
+  transform: translateY(50%) rotate(-45deg);
+}
+
+.hamburger-menu.active .line.middle {
+  opacity: 0; /* Menghilangkan garis tengah saat hamburger aktif */
+}
+
+.hamburger-menu.active .line.bottom {
+  transform: translateY(-50%) rotate(45deg);
 }
 
 /* Container Styling */
 .container {
   display: flex;
   flex-direction: column;
-  border: 2px solid blue;
+  border: 2px solid rgb(205, 133, 63);
   padding: 8px;
   border-radius: 5px;
-  margin: 0 auto;
-  background: url('background.jpg');
-}
-
-/* Main Styling */
-main {
-  display: flex;
-  flex-direction: row;
-}
-
-/* Box Styling */
-.box {
-  margin: 5px;
-  padding: 10px;
-  border-radius: 5px;
-}
-
-.flexone {
-  flex-grow: 1;
-}
-
-.flextwo {
-  flex-grow: 2;
+  margin: 0;
+  justify-content:center;
 }
 
 /* Footer Styling */
@@ -136,97 +113,74 @@ footer {
 
 /* Heading and Paragraph Styling */
 h1 {
-  text-align: justify;
+  text-align: center;
   padding-top: 1%;
+  font-family: cursive;
 }
 
 h2 {
   text-align: center;
-  color: brown;
-  text-justify: inter-word;
-  word-wrap: break-word;
-}
-
-h4 {
-  text-align: justify;
   padding-top: 1%;
+  font-family: cursive;
 }
 
-h5 {
-  text-align: center;
-  color: red;
-  word-wrap: break-word;
+h3{
+  text-align: justify;
+  padding-top: 0%;
+  font-family: cursive;
 }
 
-p {
-  text-align: center;
-  text-justify: inter-word;
+h4{
+  text-align: justify;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-/* Media Queries */
-@media screen and (max-width: 768px) {
-  nav ul {
-    width: 50%;
-  }
+/* Bio */
+.Bio{
+  display: flex;
+  align-items: center; /* Menyusun elemen secara vertikal di tengah */
+  border: 2px solid rgb(205, 133, 63);
+  padding: 10px;
+  border-radius: 5px;
+  margin: 1 auto;
 }
 
-@media screen and (max-width: 576px) {
-  .menu-toggle {
-    display: flex;
-  }
-
-  main {
-    flex-direction: column-reverse;
-  }
-
-  nav ul {
-    position: absolute;
-    right: 0;
-    top: 0;
-    width: 50%;
-    flex-direction: column;
-    height: 100vh;
-    justify-content: space-evenly;
-    align-items: center;
-    background-color: rgb(118, 80, 255);
-    transition: all 0.72s;
-    opacity: 0;
-    z-index: 2;
-  }
-
-  nav ul.menushow {
-    opacity: 0.5;
-  }
+.left {
+  margin-right: 100px; /* Jarak antara gambar dengan teks */
 }
 
-/* Video Container Styling */
-.video-container {
+.right {
+  flex: 1; /* Menyesuaikan ukuran teks dengan ruang yang tersisa */
+}
+
+.end{
+  width: 570px;
+  height: auto;
+}
+
+.image {
+  width: 250px; /* Menetapkan lebar gambar */
+  height: auto; /* Menjaga proporsi aslinya */
+  border-radius: 70%; /* Membuat sudut gambar menjadi bulat */
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); /* Menambahkan bayangan gambar */
+}
+
+.quote{
+  display: flex;
+  align-items:end; /* Menyusun elemen secara vertikal di tengah */
+  border: 2px solid rgb(205, 133, 63);
+  padding: 10px;
+  border-radius: 5px;
   margin: 0 auto;
-  border-radius: 8px;
-  overflow: hidden;
-  max-width: 100%;
-  max-height: 100%;
-}
-/* Animation Styling */
-.slide-in {
-  transform: translateX(-100%);
-  animation: slideIn 1s ease-in-out forwards;
+  font-style: italic;
 }
 
-@keyframes slideIn {
-  from {
-    transform: translateX(-100%);
-  }
-  to {
-    transform: translateX(0);
-  }
-}
-
-/* Image Styling */
-img {
-  width: 40px;
-  margin-right: 10px;
-}
-iframe{
-  align-items: center;
+/* Hobi*/
+.hobi{
+  display: flex;
+  align-items: center; /* Menyusun elemen secara vertikal di tengah */
+  border: 2px solid rgb(205, 133, 63);
+  padding: 10px;
+  border-radius: 5px;
+  margin: 1 auto;
 }
